[package]
name = "taskmaster"
version = "0.1.0"
edition = "2024"
description = "Capture tasks, record notes, and track time"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.54", features = ["derive"] }
console = "0.16.2"
ctrlc = "3.5.1"
env_logger = "0.11.8"
flexi_logger = "0.31.8"
log = "0.4.29"
regex = "1.12.2"
